fixed major bug with multiple animation loops running at same time causing autoColor to skip +1 each time. change coloring to only highlight active modes, aswell as slightly shifted drawLines() up

--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@
 }
 #timeSlider {
     width: 50%;
+    accent-color: white;
 }
 #timeDisplay {
     font-size: 20px;
